<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.app.uiuxsamples.materialactionbar.MaterialActionBarSampleActivity">

    <item
        android:id="@+id/action_previous"
        android:icon="@android:drawable/ic_media_previous"
        android:title="@string/previous"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_play"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/play"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_next"
        android:icon="@android:drawable/ic_media_next"
        android:title="@string/next"
        app:showAsAction="ifRoom" />

</menu>
